--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -51,7 +51,7 @@
 }
 
 .grid-item {
-  margin-top: 1rem;
+  margin: 1rem 0 1rem 0;
   font-size: 1.3rem;
   font-weight: 600;
   color: white;
